# pomodoro

./: .gitignore  database.py  exceptions.py  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2025_01_08_1557-5ecd0105d7af_init.py  2025_01_21_2155-46b22c0b1683_add_userprofile.py  2025_01_22_1836-c6067958db1a_add_unique_constraint_to_the_field_.py  2025_01_22_1957-cf9f7557516d_models_user_nullable_access_token.py  2025_01_27_1754-043d2bf725a0_correct_userprofile_remove_access_token_.py  2025_01_28_1819-fb743fe53b5a_tasks_model_add_user_id_column.py  2025_01_28_1933-9f92a1395868_tasks_drop_unique_constraint_for_user_.py  2025_01_29_1445-81a06cec6f1d_userprofile_add_attributes_google_.py  2025_01_29_1651-7a8eed9ae257_userprofile_make_username_and_hashed_.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/infrastructure/cache/: cache_helper.py
app/infrastructure/database/: db_helper.py
app/tasks/: handlers.py  models.py  service.py
app/tasks/repository/: task_cache.py  task_repo.py
app/users/auth/: handlers.py  service.py
cache_access/: __init__.py  cache_helper.py
clients/: __init__.py  google.py  yandex.py
config/: __init__.py  config.py  settings.py
data_access/: __init__.py  db_helper.py
dependencies/: __init__.py  dependencies.py  fake_data.py  util.py  utils.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  categories.py  db_helper.py  pomodoro_count.py  tasks.py  user.py
repository/: __init__.py  task.py  task_cache.py  task_repo.py  user.py
schemas/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
(+6 files in other folders)
